# dioxus-hacking

./: .env  .env.example  .gitignore  Cargo.toml  README.md  dev.sh
config/: Cargo.toml  build.rs
config/src/: lib.rs
crypto_svc/: Cargo.toml
crypto_svc/src/: lib.rs
database/: Cargo.toml  build.rs
database/migrations/: 0001_tables.up.sql
database/src/: lib.rs
frontend/: Cargo.toml  Dioxus.toml  build.rs
frontend/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  main.rs
