[workspace]
resolver = "2"
members = ["config", "frontend", "models", "server"]

[workspace.dependencies]
anyhow = "*"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
