[package]
name = "database"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dependencies]
async_once = "0.2.6"
lazy_static = "1.5.0"
serde = { workspace = true }
sqlx = { version = "0.8.3", default-features = false, features = ["derive", "macros", "migrate", "sqlite", "tls-rustls", "runtime-tokio"] }
