[package]
name = "frontend"
version = "0.1.0"
authors = ["Alex Wardi <alex-wardi@cirrusmd.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenvy = { workspace = true }

[dependencies]
anyhow = { workspace = true }
dioxus = { version = "0.6.0", features = ["router"] }
models = { path = "../models" }
reqwest = { version = "0.12.15", features = ["json"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
