[package]
name = "server"
version = "0.1.0"
edition = "2024"

[build-dependencies]
dotenvy = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crypto_svc = { path = "../crypto_svc" }
database = { path = "../database" }
models = { path = "../models" }
tokio = { workspace = true }
warp = "0.3.7"
